--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2018.1.18
 chardet==3.0.4
 Django==1.11.10
@@ -5,6 +8,7 @@ ecdsa==0.13
 enum34==1.1.6
 future==0.16.0
 idna==2.6
+kombu==4.1.0
 opentok==2.6.0
 Pillow==5.0.0
 pycryptodome==3.4.11
@@ -13,3 +17,4 @@ pytz==2018.3
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
+vine==1.1.4
