--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,24 @@ celery==4.1.0
 certifi==2018.1.18
 chardet==3.0.4
 Django==1.11.10
+django-fcm==0.1.1
+django-uuidfield==0.5.0
+djangorestframework==3.8.2
 ecdsa==0.13
 enum34==1.1.6
+fcm-django==0.2.18
 future==0.16.0
 idna==2.6
 kombu==4.1.0
 opentok==2.6.0
 Pillow==5.0.0
 pycryptodome==3.4.11
+pyfcm==1.4.5
 python-jose==2.0.2
 pytz==2018.3
 redis==2.10.6
 requests==2.18.4
+requests-toolbelt==0.8.0
 six==1.11.0
 urllib3==1.22
 vine==1.1.4
