--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+localsettings.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
